[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/sign/StoneSign.mesh" type="ArrayMesh" id=1]
[ext_resource path="res://scenes/sign/Sign.gd" type="Script" id=2]
[ext_resource path="res://ui/FloatingLabel/FloatingLabel.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.625, 0.625, 0.4 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.625, 0.45, 0.45 )

[node name="Sign" type="Spatial"]
script = ExtResource( 2 )

[node name="StoneSign" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.6 )
mesh = ExtResource( 1 )
material/0 = null
material/1 = null

[node name="StaticBody" type="StaticBody" parent="StoneSign"]

[node name="CollisionShape" type="CollisionShape" parent="StoneSign/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.625, 0 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.26 )
shape = SubResource( 2 )

[node name="ControlAnchor" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.63224, -0.8 )

[node name="FloatingLabel" parent="." instance=ExtResource( 3 )]
margin_left = -136.0
margin_top = -68.0
margin_right = 136.0
margin_bottom = 0.0
anchor_path = NodePath("../ControlAnchor")
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
